# cv

./: .gitignore  gulpfile.js  package-lock.json  package.json  pyproject.toml
src/: app.py
src/static/: .gitignore
src/templates/: index_en.html
