[tool.poetry]
name = "cv.gelis.ch"
version = "2.0.0"
description = "CV of Sébastien G."
license = "GPL-3.0-or-later"
authors = ["sgelis <74539800+sgelis@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/sgelis/cv"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
